@@ -1,4 +1,11 @@
-2002-04-25  Shivram U  <shivaram.upadhyayula@wipro.com>
+2002-04-24  Satyajit K  <satyajit.kanungo@wipro.com>
+
+	Reviewed by Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* src/Makefile.am, src/ghex-ui.xml, src/main.c, src/ui.c
+		Added Help functionality. Fixes #79158
+
+2002-04-24  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/bonobo-mdi.c: Before setting the status message, if the message
 	passed is not space " " then we first set the status bar message as
